--- a/src/hotelres/config/config.yaml
+++ b/src/hotelres/config/config.yaml
@@ -2,3 +2,10 @@ data_ingestion:
   bucket_name: mybucket0075
   bucket_file_name: "Hotel_Reservations.csv"
   train_ratio: 0.8
+
+data_ingestion:
+  categorical_columns:
+    -
+  numerical_columns:
+    -
+  
