--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "lightgbm>=4.6.0",
     "matplotlib>=3.10.3",
+    "mlflow>=2.22.0",
     "numpy>=2.2.6",
     "pandas>=2.2.3",
     "pyyaml>=6.0.2",
